--- a/src/page/index/index.css
+++ b/src/page/index/index.css
@@ -1,32 +1,38 @@
-.App {
-  text-align: center;
+.search-name {
+  width: 40%;
+  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: searchNameAnimation 1s ease-in-out;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  width: 100%;
+  top: 0;
+  right: 0;
+  left: 0;
+  transform: translate(0, 0);
   display: flex;
-  flex-direction: column;
+  justify-content: flex-end;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #fff;
+  padding: 10px 20px;
+  box-sizing: border-box;
 }
 
-.App-link {
-  color: #61dafb;
+.avatar-img {
+  float: right;
 }
 
-@keyframes App-logo-spin {
+@keyframes searchNameAnimation {
   from {
-    transform: rotate(0deg);
+    width: 0;
+    opacity: 0;
   }
+
   to {
-    transform: rotate(360deg);
+    width: 40%;
   }
 }
