--- a/src/page/detail/style/base.css
+++ b/src/page/detail/style/base.css
@@ -14,10 +14,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  animation: slideInUp 1s ease-in-out;
+  /* animation: slideInUp 1s ease-in-out; */
 }
 
-.detail-base:nth-child(1) {
+/* .detail-base:nth-child(1) {
   animation-delay: .2s
 }
 
@@ -27,7 +27,7 @@
 
 .detail-base:nth-child(3) {
   animation-delay: .6s
-}
+} */
 
 .base-avatar {
   margin-top: 40px;
@@ -37,10 +37,12 @@
   padding: 0;
   margin: 20px 0 0 0;
   list-style: none;
-  li {
-    color: #fff;
-    font-size: 16px;
-  }
+
+}
+
+.detail-base ul li {
+  color: #fff;
+  font-size: 16px;
 }
 
 @keyframes slideInUp {
@@ -48,6 +50,7 @@
     transform: translate(0, 40px);
     opacity: 0;
   }
+
   to {
     transform: translate(0, 0);
   }
