--- a/src/page/detail/style/base.css
+++ b/src/page/detail/style/base.css
@@ -80,7 +80,7 @@
   padding: 4px 6px;
   margin: 4px 4px;
   font-size: 14px;
-  background-color: #2e8cd5;
+  background-color: #56abfa;
   color: #eee;
   line-height: 1.5;
   border-radius: 3px;
