接口和图表调整
接口和图表调整

--- a/src/page/detail/style/base.css
+++ b/src/page/detail/style/base.css
@@ -162,6 +162,16 @@
   width: 100%;
 }
 
+
+
+
+
+.user-dounts {
+  /* display: flex; */
+}
+
+
+
 @keyframes slideInUp {
   from {
     transform: translate(0, 40px);
