--- a/src/page/index/index.css
+++ b/src/page/index/index.css
@@ -5,8 +5,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  animation: searchNameAnimation .6s ease-in-out;
-  transition: all .4s;
+  /* animation: searchNameAnimation .6s ease-in-out; */
+  /* transition: all .4s; */
 }
 
 .search-input input {
