--- a/src/page/list/index.css
+++ b/src/page/list/index.css
@@ -4,7 +4,7 @@
   padding: 20px;
   margin: 100px 10px 0;
   border-radius: 3px;
-  animation: slideInUp 1s ease-in-out;
+  /* animation: slideInUp 1s ease-in-out; */
 }
 
 .ant-list-item-meta-title {
@@ -20,7 +20,7 @@
   border-bottom: 1px solid #494949;
 }
 
-@keyframes slideInUp {
+/* @keyframes slideInUp {
   from {
     transform: translate(0, 40px);
     opacity: 0;
@@ -29,4 +29,4 @@
   to {
     transform: translate(0, 0);
   }
-}
+} */
