--- a/src/page/info/index.css
+++ b/src/page/info/index.css
@@ -1,11 +1,11 @@
 .detail-container {
-  padding: 80px 0 0 0;
   width: 100%;
   display: flex;
 }
 
 .detail-base {
   width: 400px;
+  min-width: 280px;
   /* height: 640px; */
   margin: 0 10px;
   background-color: #282b36;
@@ -17,7 +17,6 @@
   /* animation: slideInUp 1s ease-in-out; */
   position: relative;
   overflow: hidden;
-  /* flex: 1 0 400px; */
 }
 
 .detail-base-avatar {
@@ -110,6 +109,7 @@
 
 .detail-info {
   width: 400px;
+  min-width: 280px;
   /* height: 640px; */
   margin: 0 10px;
   background-color: #282b36;
@@ -121,7 +121,6 @@
   /* animation: slideInUp 1s ease-in-out; */
   position: relative;
   overflow: hidden;
-  /* flex: 1 0 400px; */
   padding: 10px;
 }
 
