--- a/src/page/list/index.css
+++ b/src/page/list/index.css
@@ -2,7 +2,7 @@
   background-color: #282b36;
   color: #fff;
   padding: 20px;
-  margin: 10px;
+  margin: 20px 10px;
   border-radius: 3px;
   box-sizing: border-box;
   /* animation: slideInUp 1s ease-in-out; */
